# mgba

./: CMakeLists.txt
include/mgba-util/: threading.h
include/mgba-util/platform/wiiu/: threading.h
src/core/: config.c
src/feature/gui/: gui-runner.c
src/platform/wiiu/: CMakeLists.txt  gui-font.c  main.c  wiiu-gpu.c  wiiu-gpu.h
src/platform/wiiu/shaders/: font.frag  font.gsh  font.vert  main.frag  main.gsh  main.vert
